Recysell/src/main/java/com/example/Recysell/error/CompraCanceladaException.java
package com.example.Recysell.error;

public class CompraCanceladaException extends RuntimeException {
    public CompraCanceladaException() {
        super("La compra no puede ser cancelada.");
    }
}
